# x86-smpboot

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/uefi/: Cargo.toml  Makefile
examples/uefi/src/: main.rs
src/: boot_ap.S  lib.rs
